# serverLogger

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.test  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build_libraries.yml  cmake-multi-platform.yml  single.yml
include/: armaLogData.hpp  coutToDebug.hpp  dllmain.hpp  glibc_version.h
serverLogger/: XEH_PREP.hpp  XEH_preInit.sqf  XEH_preStart.sqf  config.cpp  script_component.hpp  serverLogger.bikey  serverLogger.biprivatekey  stringtable.xml
serverLogger/functions/: fnc_clientsAddData.sqf  fnc_serverAddData.sqf  fnc_serverPFH.sqf  fnc_serverPreInit.sqf  fnc_serverSaveData.sqf
src/: armaLogData.cpp  dllmain.cpp  dllmain.def
